# dropfunk

./: Cargo.toml  README.adoc  README.md  shell.nix
.zed/: tasks.json
libfunk/: Cargo.toml
libfunk/src/: lib.rs
src/: main.rs
