[package]
name = "libfunk"
version = "0.1.0"
edition = "2024"

[dependencies]
itoa = { version = "1.0.16", optional = true }
log = { version = "0.4.29", optional = true }
ryu = { version = "1.0.21", optional = true }
serde = "1.0.228"
serde_json = "1.0.147"

[features]
default = [ "log" ]
log = [ "dep:itoa", "dep:ryu", "dep:log" ]
